--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,7 +2,7 @@ $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image:true;
 $home-image: url(../img/home.jpg);
-$background-opacity: 0.7;
+$background-opacity: 0.9;
 
 @mixin easeOut {
     transition: all 0.5s ease-out;
@@ -26,6 +26,18 @@ $background-opacity: 0.7;
                 background: rgba($primary-color, $background-opacity);
             }
         }
+    }
+}
+
+
+//Set Text Color
+@function set-text-color($color) {
+    @if (lightness($color)> 40) {
+        @return #000;
+    }
+
+    @else {
+        @return #fff;
     }
 }
 
